# dr_one

./: README.md
dr_one/: CMakeLists.txt  CMakeLists.txt~  package.xml  package.xml~
dr_one_move/: .#CMakeLists.txt  CMakeLists.txt  CMakeLists.txt~  package.xml~
dr_one_move/action/: move_drone.action
dr_one_move/src/: move_drone_server.cpp
dr_one_setup/: CMakeLists.txt  CMakeLists.txt~  package.xml  package.xml~  test_model.rviz  test_sim.rviz
dr_one_setup/launch/: dr_one_slam.launch  dr_one_slam.launch~  frontier_explore.launch  frontier_explore.launch~  full_explore.launch~  gazebo_global_map.launch  gazebo_global_map.launch~  gazebo_laser_odom.launch  gazebo_model.launch  gazebo_model.launch~  gazebo_slam.launch  gazebo_slam.launch~  global_map.launch  mavros_posix_sitl.launch  model.launch  move_drone.launch  posix_sitl.launch  posix_sitl.launch~  px4.launch  simulation.launch  simulation.launch~  simulation_computation.launch  simulation_viz.launch  slam.launch  slam.launch~  slam_vo.launch  test_model.launch~
dr_one_setup/param/: laser_filter.yaml  move_drone.yaml  nav_stack_params.yaml  tf_params.yaml
dr_one_setup/src/: frontier_laserscan.cpp  laser_tf_listener.cpp  tf_broadcaster.cpp  vodom_tf_listener.cpp
dr_one_setup/urdf/: quadrotor.urdf.xacro~  quadrotor.urdf~  quadrotor_base.urdf.xacro~  quadrotor_base.urdf~
frontier_exploration/action/: ExploreTask.action
frontier_exploration/launch/: global_map.launch
frontier_exploration/plugins/: bounded_explore_layer.cpp
frontier_exploration/src/: explore_client.cpp  explore_server.cpp  frontier_search.cpp
gmap_test/: CMakeLists.txt  package.xml
gmap_test/src/: odom_compute.cpp
laser_odom/: CMakeLists.txt  CMakeLists.txt~  package.xml
laser_odom/launch/: laser_odom.launch  laser_odom.launch~
laser_odom/src/: CLaserOdometry2D.cpp
navigation/costmap_2d/: CMakeLists.txt
navigation/costmap_2d/launch/: example_params.yaml
navigation/costmap_2d/src/: costmap_2d_ros.cpp  layered_costmap.cpp
navigation/costmap_2d/test/: costmap_params.yaml
navigation/dwa_local_planner/: CMakeLists.txt
